# sieve-core-dummy

./: README.md  pyproject.toml
sieve_core_dummy/: dummy.py
